fix: Aside section overflow

--- a/CVCraft/src/styles/InputDocs/document.css
+++ b/CVCraft/src/styles/InputDocs/document.css
@@ -25,6 +25,7 @@
     width: 794px;
     height: 1000px;
     background-color: white;
+    overflow: hidden;
 }
 
 .header {
